# gravity-simulator

./: .gitignore  CMakeLists.txt  CelestialBody.cpp  CelestialBody.h  README.md  Shader.cpp  Shader.h  Simulation.cpp  Simulation.h  SpacetimeGrid.cpp  SpacetimeGrid.h  body_fragment_shader.glsl  body_vertex_shader.glsl  grid_fragment_shader.glsl  grid_vertex_shader.glsl  main.cpp  run.sh  setup.sh  text_fragment_shader.glsl  text_vertex_shader.glsl  vertex_shader.glsl
